Project booking_schedule_system {
  database_type: "PostgreSQL"
  Note: "Source of truth: scripts/001_create_tables.sql (+ 005/006 for token tables)."
}

Table roles {
  name varchar(30) [pk]
  description text
  is_unique boolean [default: false]
  created_at timestamptz [default: `now()`]
}

Table permissions {
  code varchar(80) [pk]
  description text
  created_at timestamptz [default: `now()`]
}

Table role_permissions {
  role_name varchar(30) [not null, ref: > roles.name]
  permission_code varchar(80) [not null, ref: > permissions.code]
  created_at timestamptz [default: `now()`]

  indexes {
    (role_name, permission_code) [pk]
  }
}

Table users {
  id uuid [pk, default: `uuid_generate_v4()`]
  email varchar(150) [not null, unique]
  email_verified boolean [default: true]
  full_name varchar(150)
  phone varchar(50)
  avatar_url varchar(255)
  timezone varchar(50) [default: 'UTC']
  role varchar(30) [not null, default: 'customer', ref: > roles.name]
  is_active boolean [default: true]
  password_hash varchar(255)
  location_id uuid [ref: > locations.id]
  created_at timestamptz [default: `now()`]

  Note: "Partial unique indexes exist in SQL: unique admin role and unique superadmin role."
}

Table user_profiles {
  id uuid [pk, default: `uuid_generate_v4()`]
  user_id uuid [unique, ref: > users.id]
  full_name varchar(150)
  phone varchar(50)
  avatar_url varchar(255)
  timezone varchar(50) [default: 'UTC']
  created_at timestamptz [default: `now()`]
}

Table locations {
  id uuid [pk, default: `uuid_generate_v4()`]
  name varchar(150) [not null]
  timezone varchar(50) [not null, default: 'UTC']
  address text
  is_active boolean [default: true]
  created_at timestamptz [default: `now()`]
}

Table sessions {
  id uuid [pk, default: `uuid_generate_v4()`]
  user_id uuid [ref: > users.id]
  token varchar(255) [not null, unique]
  expires_at timestamptz [not null]
  created_at timestamptz [default: `now()`]
}

Table password_reset_tokens {
  id uuid [pk, default: `uuid_generate_v4()`]
  user_id uuid [ref: > users.id]
  token_hash varchar(255) [not null, unique]
  expires_at timestamptz [not null]
  used_at timestamptz
  created_at timestamptz [default: `now()`]
}

Table email_verification_tokens {
  id uuid [pk, default: `uuid_generate_v4()`]
  user_id uuid [ref: > users.id]
  token_hash varchar(255) [not null, unique]
  expires_at timestamptz [not null]
  used_at timestamptz
  created_at timestamptz [default: `now()`]
}

Table magic_link_tokens {
  id uuid [pk, default: `uuid_generate_v4()`]
  user_id uuid [ref: > users.id]
  token_hash varchar(255) [not null, unique]
  expires_at timestamptz [not null]
  used_at timestamptz
  created_at timestamptz [default: `now()`]
}

Table services {
  id uuid [pk, default: `uuid_generate_v4()`]
  admin_id uuid [ref: > users.id]
  name varchar(150) [not null]
  public_name varchar(150)
  internal_name varchar(150)
  category varchar(120)
  tags text[]
  description text
  inclusions text
  prep_notes text
  image_url varchar(255)
  image_urls text[]
  duration_minutes int [not null, default: 60]
  price decimal(10,2) [not null, default: 0]
  deposit_amount decimal(10,2) [default: 0]
  buffer_minutes int [default: 0]
  max_capacity int [default: 1]
  is_active boolean [default: true]
  is_archived boolean [default: false]
  archived_at timestamptz
  paused_from timestamptz
  paused_until timestamptz
  created_at timestamptz [default: `now()`]
}

Table staff_services {
  id uuid [pk, default: `uuid_generate_v4()`]
  staff_id uuid [ref: > users.id]
  service_id uuid [ref: > services.id]
  price_override decimal(10,2)
  deposit_override decimal(10,2)
  duration_override int
  buffer_override int
  capacity_override int
  is_bookable boolean [default: true]
  is_temporarily_unavailable boolean [default: false]
  admin_only boolean [default: false]
  created_at timestamptz [default: `now()`]

  indexes {
    (staff_id, service_id) [unique]
  }
}

Table availability_rules {
  id uuid [pk, default: `uuid_generate_v4()`]
  staff_id uuid [ref: > users.id]
  service_id uuid [ref: > services.id]
  day_of_week int [not null]
  start_time time [not null]
  end_time time [not null]
  timezone varchar(50) [default: 'UTC']
  created_at timestamptz [default: `now()`]

  Note: "day_of_week check: 0..6"
}

Table service_operating_schedules {
  id uuid [pk, default: `uuid_generate_v4()`]
  service_id uuid [unique, ref: > services.id]
  timezone varchar(50) [not null, default: 'UTC']
  rule_type varchar(20) [not null]
  open_time time
  close_time time
  effective_from date
  effective_to date
  is_active boolean [default: true]
  created_at timestamptz [default: `now()`]

  Note: "rule_type check: daily|weekly|monthly"
}

Table service_operating_rules {
  id uuid [pk, default: `uuid_generate_v4()`]
  schedule_id uuid [ref: > service_operating_schedules.id]
  rule_type varchar(30) [not null]
  weekday int
  month_day int
  nth int
  start_time time
  end_time time
  created_at timestamptz [default: `now()`]

  Note: "rule_type check: weekly|monthly_day|monthly_nth_weekday; weekday 0..6; month_day 1..31"
}

Table service_operating_exceptions {
  id uuid [pk, default: `uuid_generate_v4()`]
  service_id uuid [ref: > services.id]
  date date [not null]
  is_open boolean [default: false]
  start_time time
  end_time time
  reason varchar(255)
  created_at timestamptz [default: `now()`]
}

Table availability_exceptions {
  id uuid [pk, default: `uuid_generate_v4()`]
  staff_id uuid [ref: > users.id]
  service_id uuid [ref: > services.id]
  date date [not null]
  is_available boolean [default: false]
  start_time time
  end_time time
  reason varchar(255)
  created_at timestamptz [default: `now()`]
}

Table staff_weekly_schedules {
  id uuid [pk, default: `uuid_generate_v4()`]
  staff_id uuid [ref: > users.id]
  timezone varchar(50) [not null, default: 'UTC']
  effective_from date
  effective_to date
  is_default boolean [default: false]
  location_id uuid [ref: > locations.id]
  max_slots_per_day int
  max_bookings_per_day int
  max_bookings_per_customer int
  created_at timestamptz [default: `now()`]
}

Table staff_work_blocks {
  id uuid [pk, default: `uuid_generate_v4()`]
  schedule_id uuid [ref: > staff_weekly_schedules.id]
  weekday int [not null]
  start_time_local time [not null]
  end_time_local time [not null]

  Note: "weekday check: 0..6"
}

Table staff_break_blocks {
  id uuid [pk, default: `uuid_generate_v4()`]
  schedule_id uuid [ref: > staff_weekly_schedules.id]
  weekday int [not null]
  start_time_local time [not null]
  end_time_local time [not null]

  Note: "weekday check: 0..6"
}

Table staff_exceptions {
  id uuid [pk, default: `uuid_generate_v4()`]
  staff_id uuid [ref: > users.id]
  location_id uuid [ref: > locations.id]
  type varchar(30) [not null]
  start_utc timestamptz [not null]
  end_utc timestamptz [not null]
  is_all_day boolean [default: false]
  recurring_rule text
  reason varchar(255)
  created_by uuid [ref: > users.id]
  created_at timestamptz [default: `now()`]

  Note: "type check: time_off|blocked_time|extra_availability|override_day"
}

Table booking_holds {
  id uuid [pk, default: `uuid_generate_v4()`]
  staff_id uuid [ref: > users.id]
  service_id uuid [ref: > services.id]
  location_id uuid [ref: > locations.id]
  start_utc timestamptz [not null]
  end_utc timestamptz [not null]
  expires_at_utc timestamptz [not null]
  created_by uuid [ref: > users.id]
  created_at timestamptz [default: `now()`]
}

Table staff_service_overrides {
  id uuid [pk, default: `uuid_generate_v4()`]
  staff_id uuid [ref: > users.id]
  service_id uuid [ref: > services.id]
  price_override decimal(10,2)
  deposit_override decimal(10,2)
  duration_override int
  buffer_override int
  capacity_override int
  is_bookable boolean [default: true]
  created_at timestamptz [default: `now()`]

  indexes {
    (staff_id, service_id) [unique]
  }
}

Table audit_logs {
  id uuid [pk, default: `uuid_generate_v4()`]
  actor_id uuid [ref: > users.id]
  action varchar(50) [not null]
  entity_type varchar(50) [not null]
  entity_id uuid
  changes jsonb
  created_at timestamptz [default: `now()`]
}

Table customers {
  id uuid [pk, default: `uuid_generate_v4()`]
  user_id uuid [ref: > users.id]
  full_name varchar(150) [not null]
  email varchar(150) [not null]
  phone varchar(50)
  timezone varchar(50) [default: 'UTC']
  notes text
  is_blocked boolean [default: false]
  created_at timestamptz [default: `now()`]
}

Table bookings {
  id uuid [pk, default: `uuid_generate_v4()`]
  service_id uuid [ref: > services.id]
  staff_id uuid [ref: > users.id]
  customer_id uuid [ref: > customers.id]
  start_time_utc timestamptz [not null]
  end_time_utc timestamptz [not null]
  status varchar(30) [not null, default: 'pending']
  payment_status varchar(30) [not null, default: 'pending']
  booking_source varchar(30) [default: 'web']
  customer_timezone varchar(50) [default: 'UTC']
  created_at timestamptz [default: `now()`]

  Note: "status check: pending|confirmed|cancelled|completed|no-show; payment_status: pending|paid|refunded|failed; booking_source: web|social|admin|api"
}

Table booking_changes {
  id uuid [pk, default: `uuid_generate_v4()`]
  booking_id uuid [ref: > bookings.id]
  old_start_time timestamptz
  new_start_time timestamptz
  change_type varchar(30) [not null]
  changed_by varchar(30)
  reason text
  created_at timestamptz [default: `now()`]

  Note: "change_type check: reschedule|cancel|status_update"
}

Table booking_logs {
  id uuid [pk, default: `uuid_generate_v4()`]
  booking_id uuid [ref: > bookings.id]
  action varchar(50) [not null]
  performed_by varchar(50)
  details jsonb
  created_at timestamptz [default: `now()`]
}

Table payments {
  id uuid [pk, default: `uuid_generate_v4()`]
  booking_id uuid [ref: > bookings.id]
  provider varchar(50) [not null, default: 'aba_payway']
  provider_reference varchar(255)
  amount decimal(10,2) [not null]
  currency varchar(10) [default: 'USD']
  status varchar(30) [not null, default: 'pending']
  metadata jsonb
  created_at timestamptz [default: `now()`]

  Note: "status check: pending|completed|failed|refunded"
}

Table refunds {
  id uuid [pk, default: `uuid_generate_v4()`]
  payment_id uuid [ref: > payments.id]
  amount decimal(10,2) [not null]
  reason text
  provider_refund_id varchar(255)
  status varchar(30) [default: 'pending']
  created_at timestamptz [default: `now()`]

  Note: "status check: pending|completed|failed"
}

Table notifications {
  id uuid [pk, default: `uuid_generate_v4()`]
  booking_id uuid [ref: > bookings.id]
  channel varchar(20) [not null]
  type varchar(30) [not null]
  recipient varchar(150) [not null]
  status varchar(20) [default: 'pending']
  sent_at timestamptz
  created_at timestamptz [default: `now()`]

  Note: "channel check: email|sms; type check includes confirmation|reminder|cancellation|feedback|schedule_change|schedule_approved|schedule_rejected; status check: pending|sent|failed"
}

Table waitlist {
  id uuid [pk, default: `uuid_generate_v4()`]
  service_id uuid [ref: > services.id]
  customer_id uuid [ref: > customers.id]
  preferred_date date
  status varchar(20) [default: 'active']
  created_at timestamptz [default: `now()`]

  Note: "status check: active|notified|booked|expired"
}

Table reviews {
  id uuid [pk, default: `uuid_generate_v4()`]
  booking_id uuid [ref: > bookings.id]
  rating int [not null]
  comment text
  is_approved boolean [default: true]
  created_at timestamptz [default: `now()`]

  Note: "rating check: 1..5"
}

Table schedule_change_requests {
  id uuid [pk, default: `uuid_generate_v4()`]
  staff_id uuid [ref: > users.id]
  requested_by uuid [ref: > users.id]
  status varchar(20) [not null, default: 'pending']
  payload jsonb [not null]
  reason text
  review_note text
  reviewed_by uuid [ref: > users.id]
  reviewed_at timestamptz
  created_at timestamptz [default: `now()`]

  Note: "status check: pending|approved|rejected"
}
